--- a/trunk/Obi/Obi/Dialogs/AssignSpecialNodeMark.de.resx
+++ b/trunk/Obi/Obi/Dialogs/AssignSpecialNodeMark.de.resx
@@ -128,7 +128,7 @@
     <value />
   </data>
   <data name="m_cmbBoxSpecialNode.Items" xml:space="preserve">
-    <value>Anmerkung</value>
+    <value>Randbemerkung</value>
   </data>
   <data name="m_cmbBoxSpecialNode.Items1" xml:space="preserve">
     <value>Endnote</value>
@@ -147,7 +147,7 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_cmbBoxSpecialNode.Location" type="System.Drawing.Point, System.Drawing">
-    <value>138, 74</value>
+    <value>127, 70</value>
   </data>
   <data name="m_btn_OK.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -159,7 +159,7 @@
     <value />
   </data>
   <data name="m_btn_OK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>129, 110</value>
+    <value>121, 108</value>
   </data>
   <data name="m_btn_Cancel.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -171,7 +171,7 @@
     <value />
   </data>
   <data name="m_btn_Cancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>235, 110</value>
+    <value>227, 108</value>
   </data>
   <data name="m_btn_Cancel.Text" xml:space="preserve">
     <value>Abbrechen</value>
@@ -186,10 +186,10 @@
     <value />
   </data>
   <data name="m_rdb_btn_SpecialPhrase.Size" type="System.Drawing.Size, System.Drawing">
-    <value>147, 17</value>
+    <value>79, 17</value>
   </data>
   <data name="m_rdb_btn_SpecialPhrase.Text" xml:space="preserve">
-    <value>Ergänzende Bezeichnung</value>
+    <value>Anmerkung</value>
   </data>
   <data name="m_rdb_btn_RenumberPages.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -201,7 +201,7 @@
     <value />
   </data>
   <data name="m_rdb_btn_RenumberPages.Location" type="System.Drawing.Point, System.Drawing">
-    <value>159, 19</value>
+    <value>133, 19</value>
   </data>
   <data name="m_rdb_btn_RenumberPages.Size" type="System.Drawing.Size, System.Drawing">
     <value>148, 17</value>
@@ -219,13 +219,13 @@
     <value />
   </data>
   <data name="m_rtb_btn_AudioProcessing.Location" type="System.Drawing.Point, System.Drawing">
-    <value>331, 20</value>
+    <value>321, 19</value>
   </data>
   <data name="m_rtb_btn_AudioProcessing.Size" type="System.Drawing.Size, System.Drawing">
-    <value>112, 17</value>
+    <value>131, 17</value>
   </data>
   <data name="m_rtb_btn_AudioProcessing.Text" xml:space="preserve">
-    <value>Audio-Bearbeitung</value>
+    <value>Tonqualität bearbeiten</value>
   </data>
   <data name="m_gp_box_operation.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -237,10 +237,10 @@
     <value />
   </data>
   <data name="m_gp_box_operation.Size" type="System.Drawing.Size, System.Drawing">
-    <value>451, 43</value>
+    <value>459, 43</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>467, 162</value>
+    <value>476, 162</value>
   </data>
   <data name="$this.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
