--- a/trunk/Obi/Obi/Dialogs/DownloadFile.de.resx
+++ b/trunk/Obi/Obi/Dialogs/DownloadFile.de.resx
@@ -132,7 +132,7 @@
     <value>0</value>
   </data>
   <data name="richTextBox1.Text" xml:space="preserve">
-    <value>ACHTUNG. Wenn Sie in Formate wie mp4, amr oder 3gp exportieren wollen, gehen Sie wie folgt vor. (Das ist nur für erfahrene Bneutzer, die entstehenden Hörbücher sind nicht standardkonform.)
+    <value>ACHTUNG. Wenn Sie in Formate wie mp4, amr oder 3gp exportieren wollen, gehen Sie wie folgt vor. (Das ist nur für erfahrene Benutzer, die entstehenden Hörbücher sind nicht standardkonform.)
 http://www.daisy.org/obi/download
 After download follow following steps:-
 
